Fix problema con Safari

--- a/hardlus15704/css/estilo-index.css
+++ b/hardlus15704/css/estilo-index.css
@@ -187,31 +187,50 @@ iframe {
 *                         *
 ***************************/
 
-#foto-equipo {
-  padding: 0;
-}
-
-#container-foto {
-  background-image: url(../img/Hardlus-nacional-2020.jpg);
-  background-size: cover;
-  background-position: 50% 90%;
+#fotos-equipo {
   height: 90vh;
   max-height: 100vw;
-  animation-name: deslizar-fotitos;
-  animation-duration: 15s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+  padding: 0;
+  position: relative;
 }
 
-@keyframes deslizar-fotitos {
-  0% { background-image: url(../img/Hardlus-nacional-2020.jpg); }
-  45% { background-image: url(../img/Hardlus-nacional-2020.jpg); }
-  55% { background-image: url(../img/Hardlus-Ocuilan.jpg); }
-  100% { background-image: url(../img/Hardlus-Ocuilan.jpg); }
+.foto-pantalla {
+  width: 100%;
+  height: 90vh;
+  max-height: 100vw;
+  position: absolute;
+}
+
+#foto-nacional {
+  background-image: url(../img/Hardlus-nacional-2020.jpg);
+  background-size: cover;
+  background-position: 50% 80%;
+}
+
+#foto-ocuilan {
+  background-image: url(../img/Hardlus-Ocuilan.jpg);
+  background-size: cover;
+  background-position: 50% 100%;
+  opacity: 0;
+  animation-name: esconder-foto;
+  animation-duration: 10s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+@keyframes esconder-foto {
+  0% { opacity: 0; }
+  45% { opacity: 0; }
+  55% { opacity: 1; }
+  100% { opacity: 1; }
 }
 
 #logo-grande {
   display: block;
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
+}
+
+#container-logo .centre {
+  margin-top: 25vh;
 }
